--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -47,14 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="CheckersLog.cs" />
     <Compile Include="CheckersGame.cs" />
     <Compile Include="CheckersMove.cs" />
     <Compile Include="Drawing\GamePanelDrawer.cs" />
+    <Compile Include="CheckersMoveLogger.cs" />
     <Compile Include="Piece.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="SquaresCollection.cs" />
+    <Compile Include="UIListener.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
